--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,11 @@
         android:text="TextView"
         tools:layout_editor_absoluteX="26dp"
         tools:layout_editor_absoluteY="2dp"/>
+
+    <GridView
+        android:id="@+id/imageGridView"
+        android:layout_width="368dp"
+        android:layout_height="474dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="29dp"/>
 </android.support.constraint.ConstraintLayout>
