--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    >
 <LinearLayout
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    >
 
     <ImageView
         android:id="@+id/movieImage"
@@ -34,3 +39,4 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
