--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="0dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.tofallis.popularmovies.MainActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="2dp"/>
+        android:visibility="gone"/>
 
-    <GridView
-        android:id="@+id/imageGridView"
-        android:layout_width="368dp"
-        android:layout_height="474dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="29dp"/>
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvMovies"
+        android:padding="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
+</RelativeLayout>
