--- a/app/src/main/res/layout/movie_poster.xml
+++ b/app/src/main/res/layout/movie_poster.xml
@@ -8,17 +8,12 @@
     android:layout_height="wrap_content"
     card_view:contentPadding="0dp">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:padding="0dp">
+    <ImageView
+        android:id="@+id/moviePoster"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="0dp"
+        android:adjustViewBounds="true"
+        android:padding="0dp"/>
 
-        <ImageView
-            android:id="@+id/moviePoster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:adjustViewBounds="true"
-            android:padding="0dp"/>
-    </LinearLayout>
 </android.support.v7.widget.CardView>
