--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -13,4 +13,11 @@
         app:showAsAction="never"
         android:title="@string/sortByTopRated">
     </item>
+    <item
+    android:id="@+id/showFavourites"
+    android:orderInCategory="3"
+    app:showAsAction="never"
+    android:title="@string/showFavourites">
+</item>
+
 </menu>
