Trailer download + link opening support

--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -58,6 +58,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:background="@android:drawable/presence_video_away"
+        android:visibility="gone"
         android:contentDescription="@string/content_desc_trailer"/>
 
     <TextView
