--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -62,13 +62,11 @@
             android:layout_height="wrap_content"
             android:text="@string/trailer"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
-        <ImageView
-            android:id="@+id/trailer"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:background="@android:drawable/presence_video_away"
-            android:contentDescription="@string/trailer"
-            android:visibility="gone"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/trailers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
         <TextView
             android:id="@+id/reviews"
