--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/movieScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -65,14 +68,16 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/trailers"
+            android:nestedScrollingEnabled="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
         <TextView
             android:id="@+id/reviews"
+            android:nestedScrollingEnabled="false"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/reviews"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
     </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
